# CareWise-AI

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  classifier.py  labeling.py  pyproject.toml  sample.py  transformer_hug.py
.github/workflows/: big-brother.yaml  pre-commit.yaml
crawl/: crawl_naver.py
runs/detect/train4/: args.yaml  results.csv
tests/: test_sample.py
