[tool.isort]
profile = "black"

[tool.poetry]
name = "carewise-ai"
version = "0.1.0"
description = "CareWise AI: care-label classification"
authors = ["suhan8984 <suhan8984@daum.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
torch = "^2.4.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-quotes = "^3.4.0"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pre-commit = "^3.8.0"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
