[tool.isort]
profile = "black"

[tool.poetry]
name = "carewise-ai"
version = "0.1.0"
description = "CareWise AI: care-label classification"
authors = ["suhan8984 <suhan8984@daum.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.26.4"
torch = "^2.4.1"
matplotlib = "^3.9.2"
requests = "2.27.0"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.5"
pillow = "^10.4.0"
transformers = "^4.46.1"
opencv-python = "^4.10.0.84"
inference-sdk = "^0.25.0"
roboflow = "^1.1.49"
ultralytics = "^8.3.27"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-quotes = "^3.4.0"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pre-commit = "^3.8.0"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
